--- a/Study-Groups/Base.lproj/Main.storyboard
+++ b/Study-Groups/Base.lproj/Main.storyboard
@@ -23,6 +23,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="97" y="134"/>
         </scene>
         <!--Table View Controller-->
         <scene sceneID="hyQ-ag-BEa">
