--- a/Study-Groups/Base.lproj/Main.storyboard
+++ b/Study-Groups/Base.lproj/Main.storyboard
@@ -45,10 +45,10 @@
             </objects>
             <point key="canvasLocation" x="1080.8" y="133.5832083958021"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Display Universities View Controller-->
         <scene sceneID="hyQ-ag-BEa">
             <objects>
-                <tableViewController id="Jdq-2W-Mdk" sceneMemberID="viewController">
+                <tableViewController id="Jdq-2W-Mdk" customClass="DisplayUniversitiesViewController" customModule="Study_Groups" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="CqO-P1-WeZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
