--- a/Study-Groups/Base.lproj/Main.storyboard
+++ b/Study-Groups/Base.lproj/Main.storyboard
@@ -53,22 +53,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <navigationBar key="tableHeaderView" contentMode="scaleToFill" id="1qH-B0-cHx">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <items>
-                                <navigationItem title="Study Groups" id="zok-nY-2mk">
-                                    <barButtonItem key="rightBarButtonItem" systemItem="add" id="7wc-HL-EDg">
-                                        <connections>
-                                            <segue destination="F0f-10-WNF" kind="show" id="xX7-iN-32l"/>
-                                        </connections>
-                                    </barButtonItem>
-                                </navigationItem>
-                            </items>
-                        </navigationBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="yzM-ai-0Vn">
-                                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yzM-ai-0Vn" id="NIf-0n-Wfu">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
@@ -86,10 +73,10 @@
             </objects>
             <point key="canvasLocation" x="1815" y="134"/>
         </scene>
-        <!--View Controller-->
+        <!--Add Study Group View Controller-->
         <scene sceneID="RGR-5S-xlp">
             <objects>
-                <viewController id="F0f-10-WNF" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AddStudyGroupViewController" id="F0f-10-WNF" customClass="AddStudyGroupViewController" customModule="Study_Groups" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="piJ-Ow-SIE">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
