Log in feature works

--- a/StudyGroupsClient/Study-Groups/Base.lproj/Main.storyboard
+++ b/StudyGroupsClient/Study-Groups/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bUA-Kd-CpO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="0mC-Kp-3vW">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -179,10 +179,10 @@
             </objects>
             <point key="canvasLocation" x="2373.5999999999999" y="830.73463268365822"/>
         </scene>
-        <!--View Controller-->
+        <!--Log In View Controller-->
         <scene sceneID="AOU-OZ-XYe">
             <objects>
-                <viewController id="0mC-Kp-3vW" sceneMemberID="viewController">
+                <viewController id="0mC-Kp-3vW" customClass="LogInViewController" customModule="Study_Groups" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1Ce-3Z-shs">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -202,14 +202,21 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kxc-LD-mft">
-                                <rect key="frame" x="124" y="481" width="127" height="30"/>
+                                <rect key="frame" x="124" y="369" width="127" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Log In"/>
+                                <connections>
+                                    <action selector="logInButton:" destination="0mC-Kp-3vW" eventType="touchUpInside" id="oy9-R6-FNa"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="94q-lB-1AC"/>
                     </view>
+                    <connections>
+                        <outlet property="emailTextField" destination="ggq-dZ-B5c" id="ByQ-Aw-5ip"/>
+                        <outlet property="passwordTextField" destination="qPI-V6-Fl4" id="OtS-je-xOA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rvN-6C-DLu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
